@@ -20,15 +20,18 @@ done
 rm -f /var/lib/kdm/kdmsts
 # Revert to creating a user at uid 1000.
 echo RESET passwd/user-uid | debconf-communicate >/dev/null
-# These two templates have been preseeded, which does nasty things to their
-# templates. It's probably a bug in cdebconf's debconf-copydb that they end
-# up still registered to debian-installer/dummy at this point, but let's
-# just work around it for now so that we get sensible translated
-# descriptions.
-for q in passwd/user-fullname passwd/username; do
-	echo REGISTER "$q" "$q"
-	echo RESET "$q"
-done | debconf-communicate oem-config >/dev/null
+if [ -z "$AUTOMATIC" ]; then
+	# These two templates have been preseeded, which does nasty things
+	# to their templates.  It's probably a bug in cdebconf's
+	# debconf-copydb that they end up still registered to
+	# debian-installer/dummy at this point, but let's just work around
+	# it for now so that we get sensible translated descriptions.
+	for q in passwd/user-fullname passwd/username; do
+		echo REGISTER "$q" "$q"
+		echo RESET "$q"
+	done | debconf-communicate oem-config >/dev/null
+fi
+
 # Remove the oem-config-prepare menu item.
 rm -f /usr/share/applications/oem-config-prepare-gtk.desktop \
       /usr/share/applications/kde4/oem-config-prepare-kde.desktop
