@@ -17,6 +17,10 @@
 # along with this program; if not, write to the Free Software
 # Foundation, Inc., 51 Franklin St, Fifth Floor, Boston, MA  02110-1301  USA
 
+
+import debconf
+import os
+
 from ubiquity import plugin
 
 NAME = 'tasks'
@@ -35,4 +39,23 @@ class Page(plugin.Plugin):
         if not unfiltered:
             raise TasksUnfilteredOnly(
                 "tasks component only usable with debconf frontend")
-        return ['tasksel']
+        command = ['tasksel']
+        if 'UBIQUITY_AUTOMATIC' in os.environ:
+            # In automatic mode, we have a quandary.  tasksel without
+            # --new-install is not preseedable, but with --new-install it
+            # was designed to run on top of a simple base system and it's
+            # possible that it will remove tasks that aren't explicitly
+            # specified.  Furthermore, --new-install would be bad outside
+            # automatic mode because it's quite possible that a preseeded
+            # value for tasksel/first will have been carried over from
+            # initial installations using d-i.  However, if you're in
+            # automatic mode and you've preseeded tasksel/first then that's
+            # a fairly good sign that you actually wanted to preseed tasksel
+            # in oem-config, so in that specific case let's go ahead and use
+            # --new-install.
+            try:
+                if self.db.fget('tasksel/first', 'seen') == 'true':
+                    command.append('--new-install')
+            except debconf.DebconfError:
+                pass
+        return command
